--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ menu {
 	padding-top: 30px;
 	transition-duration: 0.1s;
 }
+
 a:hover {
 	background: #4b424f;
 	transition-duration: 0.3s;
@@ -52,11 +53,32 @@ a:hover {
 	padding-right: 5px;
 }
 
-#item1, #item2, #item3 {
-	display: none;
+#item1,
+#item2,
+#item3 {
+	list-style: none;
+	margin-top: 1px;
+	position: relative;
+	z-index: 0;
+	display: list-item;
+	width: 250px;
+	background-image: url(images/arrow.png);
+	background-repeat: no-repeat;
+	background-position: center right 30px;
 }
 
+#items {
+	position: absolute;
+	top: 160px;
+	margin-top: 9px;
+	margin-left: 45%;
+	z-index: 0;
+}
 
+#item3 {
+	border-bottom-left-radius: 6px;
+	border-bottom-right-radius: 6px;
+}
 
 #text1 {
 	font-size: 64px;
@@ -208,6 +230,7 @@ footer {
 	width: 570px;
 	margin-left: 140px;
 }
+
 .flex-control-paging li a {
 	margin-top: -40px;
 	border-radius: 100% !important;
@@ -229,7 +252,7 @@ footer {
 	transition-duration: 0.5s;
 }
 
-a:before  {
+a:before {
 	content: none !important;
 }
 
@@ -237,7 +260,7 @@ a:before  {
 	color: transparent !important;
 	text-decoration: none !important;
 	border: none !important;
-	background-image:url(images/Nav-Left-copy.png);
+	background-image: url(images/Nav-Left-copy.png);
 	background-repeat: no-repeat;
 }
 
@@ -251,7 +274,7 @@ a:before  {
 	color: transparent !important;
 	text-decoration: none !important;
 	border: none !important;
-	background-image:url(images/Nav-Left.png);
+	background-image: url(images/Nav-Left.png);
 	background-repeat: no-repeat;
 }
 
@@ -259,7 +282,6 @@ a:before  {
 	background-image: url(images/Nav-Left.png);
 	background-color: transparent;
 }
-
 
 #readMore {
 	border: 0px !important;
@@ -298,7 +320,6 @@ a:before  {
 	border-radius: 6px;
 	z-index: 3;
 }
-
 
 #regText {
 	font-size: 30px;
@@ -340,4 +361,91 @@ left {
 
 #gMap {
 	height: 260px;
+}
+
+#divider {
+	height: 1px;
+	width: 110%;
+	margin-left: -5%;
+	background-color: #e1e1e1;
+	margin-bottom: 30px;
+	margin-top: 10px;
+}
+
+input,
+td,
+th {
+	padding: 10px;
+	border-radius: 3px;
+	border-width: 1px;
+}
+
+table {
+	margin-top: 20px;
+	width: 300px;
+}
+
+input[type="text"],
+input[type="file"],
+input[list],
+textarea {
+	width: 300px;
+}
+
+.question {
+	margin-bottom: 20px;
+}
+
+#ui-datepicker-div {
+	text-align: center;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #4b424f;
+	background-color: white;
+	color: black;
+	border-radius: 6px;
+}
+
+.ui-datepicker-prev {
+	float: left;
+}
+
+.ui-datepicker-next {
+	float: right;
+}
+
+.ui-datepicker-prev,
+.ui-datepicker-next {
+	padding: 5px;
+}
+
+.ui-datepicker-title {
+	color: rgba(0, 0, 0, 0.5);
+}
+
+.ui-state-default {
+	text-decoration: none;
+	font-weight: bold;
+	color: #4b424f;
+}
+
+.ui-state-default:hover,
+.ui-datepicker-prev:hover,
+.ui-datepicker-next:hover {
+	color: #aa15e4;
+	background-color: rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+	padding: 5px;
+	border-radius: 6px;
+}
+
+table.ui-datepicker-calendar,
+table.ui-datepicker-calendar tr td {
+	margin: 0px;
+	padding: 0px;
+	text-align: center;
+}
+
+#startDate, #endDate {
+	width: 125px;
 }
